syntax = "proto3";
package directmq.v1;
option go_package = "./protocol";

message InitConnection {
    uint64 max_message_size = 3;
    string client_id = 2;
}

message ConnectionAccepted {
    uint64 max_message_size = 3;
    string client_id = 2;
}

message GracefullyClose {
    string reason = 1;
    string client_id = 2;
}
